# llm-playground

./: .gitignore  LICENSE  README.md  TODO  play.ipynb  pyproject.toml
arcadia/: __init__.py  models.py
arcadia/features/models/: __init__.py
notebooks/: amadeus-verbo-fi-7b.ipynb  tucano-2b4.ipynb
playgrounds/: amadeus-verbo-fi-7b.ipynb  bode-7b  bode-7b.ipynb  gaia-4b.ipynb  rick.ipynb  teeny-tiny-llama-460m.md  tucano-2b4.ipynb
poems/carlos_drummond_de_andrade/: Amadeus-Verbo-FI-Qwen2.5-3B-PT-BR-Instruct.txt  Gemma-3-Gaia-PT-BR-4b-it.txt  TeenyTinyLlama-460m-Chat.txt  Tucano-1b1-Instruct.txt  Tucano-2b4-Instruct.txt
poems/euclides_da_cunha/: Amadeus-Verbo-FI-Qwen2.5-3B-PT-BR-Instruct.txt  Gemma-3-Gaia-PT-BR-4b-it.txt  TeenyTinyLlama-460m-Chat.txt  Tucano-1b1-Instruct.txt  Tucano-2b4-Instruct.txt
poems/gregório_de_matos/: Amadeus-Verbo-FI-Qwen2.5-3B-PT-BR-Instruct.txt  Gemma-3-Gaia-PT-BR-4b-it.txt  TeenyTinyLlama-460m-Chat.txt  Tucano-1b1-Instruct.txt  Tucano-2b4-Instruct.txt
prompts/: BlindJudge.md  Judge.md  README.md
prompts/CarlosDrummond/: README.md
prompts/EuclidesDaCunha/: README.md
prompts/GregorioDeMatos/: README.md
prompts/data/: euclides.toml
prompts/generation/: drummond.toml  gregorio.toml
prompts/poems/: drummond.json  euclides.json  gregorio.json
prompts/template/: Blind Judge.md  judge.md
ricklm/: __init__.py  evaluation.py  models.py
ricklm/features/: __init__.py
ricklm/models/: __init__.py  _base.py  capabilities.py  clear.py
ricklm/store/: dump.py  evaluation.py
ricklm/tasks/: __init__.py  poem.py
(+192 files in other folders)
